Student Page Done?

--- a/studentpage.html
+++ b/studentpage.html
@@ -77,40 +77,42 @@
 		<label for="flpick"><input type="radio" name="flpick">No</label>
 	</div>
 	<div class = "form-group">
-		<label for="stluser">Last Name:</label>
-		<input type="text" class="form-control" id="stluser" value="Placeholder"><br>
+		<label for="flnum">Flight Number:</label>
+		<input type="text" class="form-control" id="flnum"><br>
 	</div>
 	<div class = "form-group">
-		<label for="stguser">Gender:</label>
-		<input type="text" class="form-control" id="stguser" value="FormRef"><br>
+		<label for="flname">Flight Name:</label>
+		<input type="text" class="form-control" id="flname"><br>
 	</div>
 	<div class = "form-group">
-		<label for="stlevuser">Level:</label>
-		<input type="text" class="form-control" id="stlevuser" value="Senior"><br>
+		<label for="fldate">Flight Date:</label>
+		<input type="text" class="form-control" id="fldate"><br>
 	</div>
 	<div class = "form-group">
-		<label for="stmuser">Major:</label>
-		<input type="text" class="form-control" id="stmuser" value="ITEC"><br>
+		<label for="fltime">Arrival Time:</label>
+		<input type="text" class="form-control" id="fltime"><br>
 	</div>
 	<div class = "form-group">
-		<label for="steuser">Email:</label>
-		<input type="text" class="form-control" id="steuser" value="cplaceholder@ggc.edu"><br>
+		<label for="flhnum">Home Flight Number:</label>
+		<input type="text" class="form-control" id="flhnum"><br>
 	</div>
 	<div class = "form-group">
-		<label for="stpuser">Phone Number:</label>
-		<input type="text" class="form-control" id="stpuser" value="formRef"><br>
-	</div>
-	<h4>Login Information to Confirm Changes</h4>
-	<div class = "form-group">
-		<label for="stloguser">Username:</label>
-		<input type="text" class="form-control" id="stloguser"><br>
+		<label for="flhname">Home Flight Number:</label>
+		<input type="text" class="form-control" id="flhname"><br>
 	</div>
 	<div class = "form-group">
-		<label for="stpwduser">Password:</label>
-		<input type="text" class="form-control" id="stpwduser"><br>
+		<label for="fllug">Amount of Luggage:</label>
+		<input type="text" class="form-control" id="fllug"><br>
 	</div>
 	<input type="submit" value="Submit">
 </form>
+</div>
+
+<div>
+	<h2>Helpful Information</h2>
+	<!-- Links and emergency contact information go here?-->
+
+
 </div>
 
 </body>
