--- a/studentreg.html
+++ b/studentreg.html
@@ -20,11 +20,10 @@
 
 <body>
   <center>
-    <img src="georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo">
+    <img src="georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
     <br>
     <hr>
     <br>
-
     <form>
     <table class="padtable">
       <tr>
@@ -110,5 +109,6 @@
           <input type="submit" value="Submit">
     </table>
   </form>
+  <p class="copyright">&copy;Copyright 2016 All rights reserved.</p>
 </body>
 </html>
