--- a/volreg.html
+++ b/volreg.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Student Registration</title>
+  <title>Volunteer Registration</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -108,5 +108,6 @@
           <input type="submit" value="Submit">
     </table>
   </form>
+  <p class="copyright">&copy;Copyright 2016 All rights reserved.</p>
 </body>
 </html>
