moved images to images folder and resolved html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <center>
-    <img src="georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
+    <img src="./images/georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
     <hr>
     <div class="container">
         <div class="row">
