--- a/volreg.html
+++ b/volreg.html
@@ -20,7 +20,7 @@
 
 <body>
   <center>
-    <img src="georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo">
+    <img src="./images/georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo">
     <br>
     <hr>
     <br>
