--- a/studentreg.html
+++ b/studentreg.html
@@ -20,7 +20,7 @@
 
 <body>
   <center>
-    <img src="georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
+    <img src="./images/georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
     <br>
     <hr>
     <br>
