--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse">
   		<ul class = "nav navbar-nav">
-  			<li style="float:right"><a href="signin.html">Sign In / Register</a></li>
+  			<li style="float:right"><a href="userportal.html">Sign In / Register</a></li>
   			<li style="float:right"><a href="index.html">Home</a></li>
   		</ul>
   		</div>
@@ -32,7 +32,7 @@
                 <div class="container hp">
                   <div class="row">
                       <div class="col-lg-6">
-                        <img src="AdobeStock_92920247.jpeg" width="576" height="384" class="img-responsive">
+                        <img src="./images/buzz.jpg" width="576" height="384" class="img-responsive">
                       </div>
                     <div class="col-lg-6">
                         <p><font size="+1">The goal of the International Student Exchange is to provide the upmost positive experience in culutral blending and exposure.  We welcome everyone to participate whether you're from a different country or a volunteer willing to help to show our friends around the area.  We offer airport pickup right from the gate to help all the way.<br>Our volunteers are well educated and are, at the very least, bilingual to help with any communication complication that may arise.  Each volunteer undergos a thorough background check, including a look at their driving record to keep everyone in a safe and secure enviornment<br><br><br>Sign up now and meet new students from all over the world!</font></p>
