--- a/studentdash.html
+++ b/studentdash.html
@@ -26,10 +26,12 @@
     <table class="table borderless">
       <th class="ccol"><a href="">Click here to view current housing and pickup tickets.</a></th>
     </table>
+
     <hr/>
-    <form action="">
+
+    <form name="studentTicketForm" action="">
       <table class="table borderless">
-        <th class="ccol" colspan=2>Need a lift from the Airport? Make a new request:</th>
+        <th class="ccol" colspan=2>Need a lift from the Airport? Arrange for a ride:</th>
         <tr>
           <td class="lcol">Departure flight number: </td>
           <td><input type="text" name="departNumber"></td>
@@ -54,17 +56,41 @@
           <td class="lcol">Arival time: </td>
           <td><input type="time" name="flightTime"></td>
         </tr>
+        <th class="ccol" colspan=2>Do you also need temporary housing? (must select one)</th>
+        <tr>
+          <td class="ccol" colspan=2>
+            <input type="radio" name="housingOption" value="yesHousing">Yes
+            <input type="radio" name="housingOption" value="yesHousing">No
+          </td>
+        </tr>
+        <tr>
+          <td class="lcol">If yes...</td>
+        </tr>
+        <tr>
+          <td class="lcol">Start date: </td>
+          <td><input type="date" name="housingStartDate"></td>
+        </tr>
+        <tr>
+          <td class="lcol">End date: </td>
+          <td><input type="date" name="housingEndDate"></td>
+        </tr>
+        <tr>
+          <td class="lcol">Comments: </td>
+          <td><textarea rows="4" cols="40" name="comments" form="studentTicketForm"></textarea></td>
+        </tr>
         <tr>
           <td class="ccol" colspan=2><input type="submit" value="Submit"></td>
         </tr>
       </table>
     </form>
+
     <hr/>
+
     <p class="copyright">&copy;Copyright 2016 All rights reserved.</p>
   </body>
   </html>
 
   <tr>
     <td class="lcol"></td>
-    <td class=></td>
-  </table>
+    <td></td>
+  </tr>
