Volunteer Dash finished

--- a/studentdash.html
+++ b/studentdash.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Student Registration</title>
+  <title>Student Dashboard</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -24,7 +24,7 @@
     <br>
     <hr>
     <table class="table borderless">
-      <th class="ccol"><a href="">Click here to view current housing and pickup tickets.</a></th>
+      <th class="ccol"><a href="">Click here to view your housing and pickup tickets.</a></th>
     </table>
 
     <hr/>
