--- a/userportal.html
+++ b/userportal.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Student Registration</title>
+  <title>Login/Registration Portal</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
