--- a/studentdash.html
+++ b/studentdash.html
@@ -10,7 +10,6 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse">
         <ul class = "nav navbar-nav">
-         <li style="float:right"><a href="index.html">Sign In / Register</a></li>
          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
@@ -64,7 +63,7 @@
           </td>
         </tr>
         <tr>
-          <td class="lcol">If yes...</td>
+          <td class="ccol" colspan=2>If yes...</td>
         </tr>
         <tr>
           <td class="lcol">Start date: </td>
