--- a/studentdash.html
+++ b/studentdash.html
@@ -10,6 +10,7 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse">
         <ul class = "nav navbar-nav">
+         <li style="float:right"><a href="index.html">Sign In / Register</a></li>
          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
@@ -22,14 +23,14 @@
     <img src="./images/georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
     <br>
     <hr>
-    <table class="table borderless">
+    <table class="portaltable borderless">
       <th class="ccol"><a href="">Click here to view your housing and pickup tickets.</a></th>
     </table>
 
     <hr/>
 
     <form name="studentTicketForm" action="">
-      <table class="table borderless">
+      <table class="width borderless table">
         <th class="ccol" colspan=2>Need a lift from the Airport? Arrange for a ride:</th>
         <tr>
           <td class="lcol">Departure flight number: </td>
@@ -63,7 +64,7 @@
           </td>
         </tr>
         <tr>
-          <td class="ccol" colspan=2>If yes...</td>
+          <td class="lcol">If yes...</td>
         </tr>
         <tr>
           <td class="lcol">Start date: </td>
