--- a/userportal.html
+++ b/userportal.html
@@ -10,7 +10,8 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse">
         <ul class = "nav navbar-nav">
-         <li style="float:right"><a href="index.html">Home</a></li>
+          <li style="float:right"><a href="userportal.html">Sign In / Register</a></li>
+          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
    </div>
