Updated Vol Dash

--- a/voldash.html
+++ b/voldash.html
@@ -10,6 +10,7 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse">
         <ul class = "nav navbar-nav">
+         <li style="float:right"><a href="index.html">Sign In / Register</a></li>
          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
@@ -22,13 +23,13 @@
     <img src="./images/georgia-tech-logos.png" alt="Georgia Tech Logo" class="logo img-responsive">
     <br>
     <hr>
-    <table class="table borderless">
+    <table class="width table borderless">
       <th class="ccol"><a href="">Click here to view current student housing and pickup requests.</a></th>
     </table>
 
     <hr/>
 
-    <table class="table borderless">
+    <table class="width table borderless">
       <th class="ccol" colspan=2>Your registered student pickup availability:</th>
       <tr>
         <td class="ccol" colspan=2>You are not registerd for any times</td>
@@ -36,7 +37,7 @@
     </table>
 
     <form action="" name="volPickupReg">
-      <table class="table borderless">
+      <table class="width table borderless">
         <th class="ccol" colspan=2>Register a new student pickup availability:</th>
         <tr>
           <td class="lcol">Available date: </td>
@@ -62,7 +63,7 @@
 
     <hr/>
 
-    <table class="table borderless">
+    <table class="width table borderless">
       <th class="ccol" colspan=2>Your registered temporary housing availability:</th>
       <tr>
         <td class="ccol" colspan=2>You are not registerd for any dates</td>
@@ -70,7 +71,7 @@
     </table>
 
     <form action="" name="volHousingReg">
-      <table class="table borderless">
+      <table class="width table borderless">
         <th class="ccol" colspan=2>Register a new temporary housing availability:</th>
         <tr>
           <td class="lcol">Begining available date: </td>
