--- a/admindash.html
+++ b/admindash.html
@@ -3,6 +3,7 @@
 <head>
   <title>Administrator Dashboard</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="./css/admin.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -10,6 +11,7 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse" style="float:right;">
         <ul class = "nav navbar-nav">
+         <li style="float:right"><a href="index.html">Sign In / Register</a></li>
          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
@@ -23,7 +25,7 @@
     <br>
     <hr>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="container-fluid center">
         <div class = "collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="dropdown">
