--- a/admindash.html
+++ b/admindash.html
@@ -11,7 +11,7 @@
   	<div class = "container-fluid">
   		<div class = "collapse navbar-collapse" style="float:right;">
         <ul class = "nav navbar-nav">
-         <li style="float:right"><a href="index.html">Sign In / Register</a></li>
+         <li style="float:right"><a href="">Logout</a></li>
          <li style="float:right"><a href="index.html">Home</a></li>
        </ul>
      </div>
