Added the Placeholders on the forms

--- a/studentreg.html
+++ b/studentreg.html
@@ -32,7 +32,7 @@
           <p>Last Name: </p>
         </td>
         <td>
-          <input type="text" name="lname">
+          <input type="text" name="lname" placeholder="Last Name">
         </td>
       </tr>
       <tr>
@@ -40,7 +40,7 @@
           <p>First Name: </p>
         </td>
         <td>
-          <input type="text" name="fname">
+          <input type="text" name="fname" placeholder="First Name">
         </td>
       </tr>
       <tr>
@@ -68,15 +68,15 @@
           <p>Major: </p>
         </td>
         <td>
-          <input type="text" name="major">
+          <input type="text" name="major" placeholder="Major">
         </td>
       </tr>
       <tr>
         <td>
-          <p>Emergency Contact: <br> <font size="-2">(Country code ###-###-####)</p>
+          <p>Emergency Contact:</p>
         </td>
         <td>
-          <p>+<input type="text" name="ccode" maxlength="3" size="1"> (<input type="text" name="area" maxlength="3" size="1">) <input type="text" name="fphone" maxlength="3" size="1"> - <input type="text" name="lphone" maxlength="4" size="1"></p>
+          <input type="text" name="contact" maxlength="11" placeholder="Format ###########">
         </td>
       </tr>
       <tr>
@@ -84,7 +84,7 @@
           <p>Email: </p>
         </td>
         <td>
-          <input type="text" name="email">
+          <input type="text" name="email" placeholder="E-mail">
         </td>
       </tr>
       <tr>
@@ -92,7 +92,7 @@
           <p>Password:</p>
         </td>
         <td>
-          <input type="password" name="pw" id="pw">
+          <input type="password" name="pw" id="pw" placeholder="Password">
         </td>
       </tr>
       <tr>
@@ -100,7 +100,7 @@
           <p>Verify Password:</p>
         </td>
         <td>
-          <input type="password" name="vpw" id="vpw">
+          <input type="password" name="vpw" id="vpw" placeholder="Verify Password">
         </td>
       </tr>
       <tr>
