--- a/volreg.html
+++ b/volreg.html
@@ -32,7 +32,7 @@
             <p>Last Name: </p>
           </td>
           <td>
-            <input type="text" name="lname">
+            <input type="text" name="lname" placeholder="Last Name">
           </td>
         </tr>
         <tr>
@@ -40,7 +40,7 @@
             <p>First Name: </p>
           </td>
           <td>
-            <input type="text" name="fname">
+            <input type="text" name="fname" placeholder="First Name">
           </td>
         </tr>
         <tr>
@@ -58,7 +58,7 @@
               <p>Affiliation: </p>
             </td>
             <td>
-              <p><input type="text" name="aff">
+              <input type="text" name="aff" placeholder="Affiliation">
               </td>
             </tr>
             <tr>
@@ -66,7 +66,7 @@
                 <p>Major: </p>
               </td>
               <td>
-                <input type="text" name="major">
+                <input type="text" name="major" placeholder="Major">
               </td>
             </tr>
             <tr>
@@ -74,7 +74,7 @@
                 <p>Cell Phone:</p>
               </td>
               <td>
-                <p>(<input type="text" name="area" maxlength="3" size="1">) <input type="text" name="fphone" maxlength="3" size="1"> - <input type="text" name="lphone" maxlength="4" size="1"></p>
+                <input type="text" name="phone" maxlength="10" placeholder="Format ##########">
               </td>
             </tr>
             <tr>
@@ -82,7 +82,7 @@
                 <p>Email: </p>
               </td>
               <td>
-                <input type="text" name="email">
+                <input type="text" name="email" placeholder="Email">
               </td>
             </tr>
             <tr>
@@ -90,7 +90,7 @@
                 <p>Password:</p>
               </td>
               <td>
-              <input type="password" name="pw" id="pw">
+              <input type="password" name="pw" id="pw" placeholder="Email">
               </td>
             </tr>
             <tr>
@@ -98,7 +98,7 @@
                 <p>Verify Password:</p>
               </td>
               <td>
-                <input type="password" name="vpw" id="vpw">
+                <input type="password" name="vpw" id="vpw" placeholder="Verify Email">
               </td>
             </tr>
             <tr>
