Temp Changes to User Portal and PHP

--- a/userportal.html
+++ b/userportal.html
@@ -48,15 +48,12 @@
         </tr>
         <tr>
           <td class="ccol">
-			  <form action=".\studentreg.html" method="get">
-        <input type="submit"  value="Student" />
-				  </form>
+        <a href="./studentreg.html">Student</a>
           </td>
         </tr>
         <tr>
         <td class="ccol">
-         <form action  = "volreg.php" method = "get">
-        <input type = "submit"  value = "Volunteer" />
+         <a href="./volreg.html">Volunteer</a>
 				  </form>
         </td>
       </tr>
